--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-    <title>socialrepeat-backend </title>
+    <title>-backend </title>
 </head>
 
 <body align="center">
     <p>
-        <h3>Welcome to socialrepeat-backend chat API</h3>
+        <h3>Welcome to -backend chat API</h3>
     </p>
 </body>
 
